RESOLVED FIXED283479
Unable to dump WebGPU shaders after 286825@main
https://bugs.webkit.org/show_bug.cgi?id=283479
Summary Unable to dump WebGPU shaders after 286825@main
Kimmo Kinnunen
Reported 2024-11-21 03:26:10 PST
Unable to dump WebGPU shaders after 286825@main 286825@main Add support for building wgslc on Linux x86-64 bug 283111
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-21 03:26:28 PST
Kimmo Kinnunen
Comment 2 2024-11-21 03:32:35 PST
Kimmo Kinnunen
Comment 3 2024-11-21 06:04:08 PST
EWS
Comment 4 2024-11-21 09:45:42 PST
Committed 286912@main (9e68cdf074c7): <https://commits.webkit.org/286912@main> Reviewed commits have been landed. Closing PR #36946 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.