Unable to dump WebGPU shaders after 286825@main https://bugs.webkit.org/show_bug.cgi?id=283479 rdar://140335930

Reviewed by Tadeu Zagallo.

PLATFORM(__APPLE__) is not a correct preprocessor condition.
Use PLATFORM(COCOA) instead.

* Source/WebGPU/WGSL/ConstantValue.h:
* Source/WebGPU/WGSL/Metal/MetalCodeGenerator.cpp:
(WGSL::Metal::generateMetalCode):

Canonical link: https://commits.webkit.org/286912@main